kube/example-1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter
  labels:
    app: counter
spec:
  replicas: 2
  selector:
    matchLabels:
      app: counter
  template:
    metadata:
      name: counter
      labels:
        app: counter
    spec:
      containers:
        - name: counter
          image: danijelradakovic/counter
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              port: 8000
              path: /probe/liveness
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              port: 8000
              path: /probe/readiness
            initialDelaySeconds: 3
            periodSeconds: 3
      restartPolicy: Always
