kube/example-1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /counter
            backend:
              service:
                name: counter
                port:
                  number: 8000
          - pathType: Prefix
            path: /echo
            backend:
              service:
                name: echo
                port:
                  number: 8080
